Adding Some Entities, Services and Controllers